--- a/src/containers/CardContainer/index.scss
+++ b/src/containers/CardContainer/index.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #e7e7e7;
 }
 
 .form--container {
@@ -11,6 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  background-color: #fff;
 
   font-family: $base-family;
   font-size: $base-size;
@@ -37,11 +39,12 @@
 }
 
 .card--list{
-  padding: 2% 5% 2% 5%;
+  margin: 2% 5% 2% 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 90%;
+  background-color: #fff;
 
   @media (min-width: $screen-md-min) {
     flex-direction: row;
