--- a/src/containers/CardContainer/index.scss
+++ b/src/containers/CardContainer/index.scss
@@ -40,6 +40,7 @@
 
 .card--list{
   margin: 2% 5% 2% 5%;
+  padding: 10px 0 10px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
